<resources>
    <string name="app_name">Armenia Guide Vtb</string>
    <string name="code">Код</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_btn_close">description_btn_close</string>
    <string name="description_icon_logo">description_icon_logo</string>
    <string name="text_sign_in_google">Войти через Google</string>
    <string name="description_icon_google">description_icon_google</string>
    <string name="description_icon_facebook">description_icon_facebook</string>
    <string name="text_sign_in_facebook">Войти через Facebook</string>
    <string name="description_icon_vkontakte">description_icon_vkontakte</string>
    <string name="text_sign_in_vkontakte">Войти через Вконтакте</string>
    <string name="text_login_email">Войти через Email</string>
    <string name="hint_text_input_email">Введите email</string>
    <string name="text_or">или</string>
    <string name="text_btn_start">Начать</string>
    <string name="description_logo_vtb">description_logo_vtb</string>
    <string name="description_icon_mc">description_icon_mc</string>
    <string name="text_title_email_confirm">Откройте свою виртуальную карту за 5 минут</string>
    <string name="description_icon_email">description_icon_email</string>
    <string name="checkout">Оформить</string>
    <string name="title_on_boarding_fragment_1">Виртуальная карта, которая тебе понравится</string>
    <string name="card_vtb">card_vtb</string>
    <string name="title_on_boarding_fragment_2_1">Мгновенное оформление</string>
    <string name="title_on_boarding_fragment_2_2">Быстрое оформление \nчерез приложение</string>
    <string name="title_on_boarding_fragment_3_1">Mультивалютный дебетовый счет</string>
    <string name="title_on_boarding_fragment_3_2">AMD, USD, EUR, RUR \nс льготным курсом конвертации</string>
    <string name="title_on_boarding_fragment_4_1">Полный контроль</string>
    <string name="title_on_boarding_fragment_4_2">Управление банковской активностью \nв онлайн-режиме</string>
    <string name="title_on_boarding_fragment_5_1">Удобная оплата</string>
    <string name="title_on_boarding_fragment_5_2">Оплата онлайн и офлайн покупок через приложение Armenia Guide</string>
    <string name="icon_close_black">icon_close_black</string>
    <string name="title_enter_pin_1">Авторизация</string>
    <string name="title_enter_pin_2">Придумайте 5-значный цифровой код</string>
    <string name="circle">circle</string>
    <string name="enter_pin">enter_pin</string>
    <string name="title_repeat_pin_1">Повторите 5-значный цифровой код</string>
    <string name="title_email">Email</string>
    <string name="next">Далее</string>
    <string name="text_position_confirm_email">Подтвердите почту</string>
    <string name="text_minutes_position_confirm_email">1 минута</string>
    <string name="description_icon_fill_in_form">description_icon_fill_in_form</string>
    <string name="text_position_fill_in_form">Заполните анкету</string>
    <string name="text_minutes_fill_in_form">2 минуты</string>
    <string name="description_icon_go_to_verification">description_icon_go_to_verification</string>
    <string name="text_position_go_to_verification">Пройдите верификацию</string>
    <string name="text_minutes_position_go_to_verification">3 минуты</string>
    <string name="description_icon_get_your_card">description_icon_get_your_card</string>
    <string name="text_position_get_your_card">Получите карту</string>
    <string name="description_icon_information">description_icon_information</string>
    <string name="icon_close_gray">icon_close_gray</string>
    <string name="title_fill_in_the_form">Заполните анкету</string>
    <string name="description_fill_in_the_form">Приготовьте паспорт</string>
    <string name="text_title_user_information">Личные данные</string>
    <string name="hint_text_citizen_ship">Гражданство</string>
    <string name="hint_text_date_of_birth">Дата рождения</string>
    <string name="hint_text_second_name">Фамилия</string>
    <string name="hint_text_first_name">Имя</string>
    <string name="text_description_personal_area">Просим предоставить паспортные данные. </string>
    <string name="text_title_phone_number">Номер телефона</string>
    <string name="text_description_phone_number">Добавьте номер вашего телефона, чтобы подключить его к вашей учетной записи для её безопасного хранения</string>
    <string name="hint_text_phone_number">Номер телефона</string>
    <string name="title_legal_address">Адрес</string>
    <string name="text_info_legal_address">Пожалуйста, укажите адрес проживания</string>
    <string name="hint_text_country">Страна</string>
    <string name="hin_text_city">Город</string>
    <string name="hint_text_street">Улица</string>
    <string name="hint_text_apartment_number">Номер квартиры</string>
    <string name="hint_text_house_number">Номер дома</string>
    <string name="hint_text_passport_date_issue">Когда выдан</string>
    <string name="hint_text_passport_date_of_expiry">Окончание срока действия</string>
    <string name="hint_text_social_card_number">Номер социальной карты</string>
    <string name="text_title_user_passport">Паспорт</string>
    <string name="text_passport_info">Просим предоставить паспортные данные.</string>
    <string name="hint_text_passport_serial_number">Серия и номер паспорта</string>
    <string name="text_communication_info">Пожалуйста, выберите услугу.</string>
    <string name="text_title_communication">Обращения</string>
    <string name="text_obtaining_the_statement">Получение выписки</string>
    <string name="hint_text_communication_with_the_bank">Связать с банком</string>
    <string name="description_ic_biometry_success">description_ic_biometry_success</string>
    <string name="text_title_biometry_success">Анкета успешно заполнена</string>
    <string name="text_description_biometry_success">Следующий шаг: Фото паспорта</string>
    <string name="description_ic_biometry_invalid">description_ic_biometry_invalid</string>
    <string name="title_text_biometry_invalid">Вы ввели неверные данные</string>
    <string name="text_title_biometry_rejected">Сожелеем,\nбанк отклонил вашу заяавку</string>
    <string name="text_button_support">Поддержка</string>
    <string name="text_description_biometry_rejected"><u>Правила отказа</u></string>
    <string name="description_icon_video_biometry">description_icon_video_biometry</string>
    <string name="text_title_video_biometry">Снимите видео</string>
    <string name="text_description_video_biometry">Найдите освещенное место</string>
    <string name="text_btn_go_to_biometry">Перейти к биометрии</string>
    <string name="title_auth_personal_area">Привет, Анастасия!</string>
    <string name="enter_with_face_id">Войти через FaceID</string>
    <string name="text_title_auth_profile">Профиль</string>
    <string-array name="citizen_ship">
        <item>Республика Армения</item>
        <item>Российская Федерация</item>
    </string-array>
    <string name="attempts_left_5">Осталось 5 попиток</string>
    <string name="attempts_left_4">Осталось 4 попиток</string>
    <string name="attempts_left_3">Осталось 3 попиток</string>
    <string name="attempts_left_2">Осталось 2 попиток</string>
    <string name="attempts_left_1">Осталось 1 попиток</string>
    <string name="attempts_left_0">Осталось 0 попиток</string>
    <string name="reset">Сбросить</string>
    <string name="replenish">Пополнить</string>
    <string name="pay">Оплатить</string>
    <string name="personal_area_vtb">Личный кабинет ВТБ</string>
    <string name="help_img">help_img</string>
    <string name="balance_up">Пополнение</string>
    <string name="debit_card">Карта списания</string>
    <string name="top_up_card">Карта пополнения</string>
    <string name="top_up_amount">Сумма пополнения</string>
    <string name="balance_up_button">Пополнить</string>
    <string name="done_btn">Готово</string>
    <string name="number_card">Номер карты</string>
    <string name="expires">Срок действия</string>
    <string name="save_card">Сохранить карту</string>
    <string name="cvc">CVC</string>
    <string name="card_number">Номер карты</string>
    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string name="description_icon_check">description_icon_check</string>
    <string name="regular_expression">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</string>
    <string name="text_retake_button">Переснять</string>
    <string name="text_submit_button">Готово</string>
    <string name="description_button_back">description_button_back</string>
    <string name="title_detect_passport_photo">Фото паспорта</string>
    <string name="description_button_capture_video">description_button_capture_video</string>
    <string name="description_background_detect_box">description_background_detect_box</string>
    <string name="description_passport_photo">description_passport_photo</string>
    <string name="description_icon_prepare_passport">description_icon_prepare_passport</string>
    <string name="title_passport_photo">Подготовьте ваш паспорт</string>
    <string name="text_info_passport_photo">Сделайте фото первых двух страниц</string>
    <string name="description_face_detect_box">description_face_detect_box</string>
    <string name="text_title_face_detect_video_success">Заявка заполнена успешно</string>
    <string name="text_description_face_detect_video_success">В ближайжее время мы сообщим о результатах проверки</string>
    <string name="text_face_detect_failure_btn_retake">Повторить</string>
    <string name="text_face_detect_failure_btn_later">Позже</string>
    <string name="text_title_face_detect_failure">Вас плохо видно</string>
    <string name="text_description_face_detect_failure">Не удалось снять видео</string>
    <string name="text_title_detect_passport_submit">Снимок паспорта успешно проделан</string>
    <string name="text_description_detect_passport_submit">Следующий шаг: Биометрия</string>
    <string name="icon_vtb_brand_card">icon_vtb_brand_card</string>
    <string name="text_title_answer">Поздравляем!</string>
    <string name="text_description_answer">Вы успешно прошли проверку</string>
    <string name="text_button_proceed_to_profile">В личный кабинет</string>
    <string name="text_title_contract">Id vel lectus id mauris dui loreum iliduas</string>
    <string name="hint_label_email">Email</string>
    <string name="hint_text_password">Пароль</string>
    <string name="hint_text_input_password">Введите пароль</string>
    <string name="text_button_login_user">Войти</string>
    <string name="text_reset_password">Забыли пароль?</string>
    <string name="title_confirm_email">Подтверждение почты</string>
    <string name="text_description_confirm_Email">Подтвердите вашу почту для того, чтобы подключить его к вашей учетной записи для её безопасного хранения.</string>
    <string name="text_button_confirm">Подтвердить</string>
</resources>