<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/scan_face_preview_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:scaleType="fillCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5.5dp"
        android:background="@drawable/ic_background_video_capture_close_button"
        android:contentDescription="@string/description_btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22.5dp"
        android:background="@drawable/ic_back_toolbar"
        android:contentDescription="@string/description_button_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_close" />

    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginBottom="49dp"
        android:background="@drawable/ic_background_video_capture_button"
        android:contentDescription="@string/description_button_capture_video"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/faceDetectBox"
        android:layout_width="0dp"
        android:layout_height="398dp"
        android:layout_marginHorizontal="37dp"
        android:background="@drawable/background_face_detect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/camera_capture_button"
        android:layout_marginBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"

        android:contentDescription="@string/description_face_detect_box" />

</androidx.constraintlayout.widget.ConstraintLayout>