<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/description_btn_close"
        android:src="@drawable/ic_btn_close_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_video_biometry"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/description_icon_video_biometry"
        android:src="@drawable/ic_video_biometry"
        app:layout_constraintBottom_toBottomOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_video_biometry"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="37.5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_horizontal|top"
        android:lineHeight="24sp"
        android:lineSpacingExtra="5sp"
        android:text="@string/text_title_video_biometry"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:textStyle="normal"
        android:translationY="-2.43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_video_biometry"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/description_video_biometry"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_horizontal|top"
        android:lineHeight="20sp"
        android:lineSpacingExtra="5sp"
        android:text="@string/text_description_video_biometry"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textStyle="normal"
        android:translationY="-2.34sp"
        app:layout_constraintEnd_toEndOf="@id/title_video_biometry"
        app:layout_constraintStart_toStartOf="@id/title_video_biometry"
        app:layout_constraintTop_toBottomOf="@id/title_video_biometry"
        tools:targetApi="p" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_vertical|center_horizontal"
        android:lineSpacingExtra="5sp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>