<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_btn_close_black"
        android:contentDescription="@string/description_btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_confirm_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="top"
        android:lineHeight="24sp"
        android:lineSpacingExtra="5sp"
        android:text="@string/title_confirm_email"
        android:textAppearance="@style/text_appearance"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:translationY="-2.43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_close"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/description_confirm_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:lineHeight="18sp"
        android:lineSpacingExtra="4sp"
        android:text="@string/text_description_confirm_Email"
        android:textAppearance="@style/text_appearance"
        android:textColor="@color/gray_description"
        android:textFontWeight="400"
        android:textSize="15sp"
        android:translationY="-1.82sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_confirm_email"
        tools:targetApi="p" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/box_input_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_label_email"
        android:textColorHint="@color/gray"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_confirm_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/gotham_pro"
            android:gravity="center_vertical"
            android:hint="@string/hint_text_input_email"
            android:inputType="textEmailAddress"
            android:lineSpacingExtra="4sp"
            android:lines="1"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="15sp"
            android:textStyle="normal"
            app:errorEnabled="true"
            tools:ignore="TextContrastCheck"
            tools:targetApi="p" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/background_button_red"
        android:gravity="center_vertical|center_horizontal"
        android:lineSpacingExtra="5sp"
        android:text="@string/text_button_confirm"
        android:textAllCaps="false"
        android:textAppearance="@style/text_appearance"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>