<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <androidx.camera.view.PreviewView
        android:id="@+id/scan_face_preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <com.armenia_guide.ui.biometry_access.passport_detect.RectanglePassportDetect
        android:id="@+id/box_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
    <com.armenia_guide.ui.biometry_access.passport_detect.RectanglePassportDetectSuccess
        android:id="@+id/box_green"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"

        />


    <TextView
        android:id="@+id/title_detect_passport"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/title_detect_passport_photo"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back_toolbar"
        android:contentDescription="@string/description_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/ic_background_video_capture_button"
        android:contentDescription="@string/description_button_capture_video"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>